# WideParser

./: .gitignore  CMakeLists.txt  LICENCE.md  Parser.cbp  README.md  Variant.cpp  Variant.h  Writer.h  fic2.txt
divers/: json.yml
divers/flood/: définition.cdl  définition.json  définition.xml  définition.yml  parser_json.txt  syntax regexp.txt
doxygen/html/: Thumbs.db  _reader_8h_source.html  _variant_8h_source.html  _writer_8h_source.html  annotated.html  class_reader-members.html  class_reader.html  class_variant-members.html  class_variant.html  class_writer-members.html  class_writer.html  classes.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_type.html  index.html
src/: Lexer.cpp  Lexer.hpp  Reader.cpp  Reader.hpp  Variant.cpp  Variant.hpp  Writer.cpp  Writer.hpp  main.cpp
syntax/: json.yml  languages.txt  syntax.yml  yaml.yml
tests/: fic.txt  test.txt
